--- a/TestForGit/Home.html
+++ b/TestForGit/Home.html
@@ -6,7 +6,7 @@
 <body>
     <div>
         <header>Test</header>
-        <section>Section</section>
+        <section>Section Amit</section>
         <footer>footer</footer>
     </div>
 </body>
