--- a/TestForGit/Home.html
+++ b/TestForGit/Home.html
@@ -9,7 +9,7 @@
         <section>Section Amit</section>
         <footer>footer</footer>
 
-swef vewvevev xdqeveve
+swef vewvevev xdqevevexd sc
     </div>
 </body>
 </html>
